add main-course main-thesis footer

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                 <img src="./images/information-main.jpg" alt="main">
                 <div class="info_start_text">
                     <h2>It doesn't hurt to keep practing</h2>
-                    <p id="quote">&quot;Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus accusamus mollitia odio
+                    <p id="quote">&quot;Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus accusamus
+                        mollitia odio
                         sint illo facere eius excepturi omnis. Similique facere, provident possimus atque voluptates,
                         doloribus sint dignissimos nisi rerum eos fuga. Maxime, odit.&quot;</p>
                     <p>Emanual, Sr Strategist at Hiring.com</p>
@@ -157,11 +158,43 @@
             </div>
         </section>
         <section class="thesis">
-            <div class="thesis_main"></div>
-            <div class="thesis_other"></div>
+            <h2>Thesis Exhibit</h2>
+            <div class="thesisall">
+                <div class="thesis_main">
+                    <video src="./videos/thesis.mp4" controls></video>
+                    <div class="thesis_main_text">
+                        <h4>Reimagine urban</h4>
+                        <p>&quot;Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur, saepe in
+                            praesentium mollitia natus ipsam alias suscipit voluptatem enim nisi maxime tenetur
+                            similique eligendi cupiditate, eaque, eveniet reiciendis officia omnis.&quot;</p>
+                    </div>
+                </div>
+                <div class="thesis_other">
+                    <div class="thesis_other_card">
+                        <img src="./images/thesis-fisma.jpg" alt="Fisma">
+                        <div class="thesis_other_card_text">
+                            <h4>Fisma: Design and Prototype</h4>
+                            <p>Designer showcase of new prototype product</p>
+                        </div>
+                    </div>
+                    <div class="thesis_other_card">
+                        <img src="./images/thesis-now-and-then.jpg" alt="Now and Then">
+                        <div class="thesis_other_card_text">
+                            <h4>Now and Then</h4>
+                            <p>Research study about New York</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <p>&copy; 2016 Colmar Academy. All rights reserved</p>
+        <ul>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Privacy</a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
